fix(app): improve rounded buttons on mobile view
closes: #ci-562

--- a/projects/mclaren/theme/app.css
+++ b/projects/mclaren/theme/app.css
@@ -8,6 +8,8 @@ body {
   --gray-500: rgba(0, 0, 0, 0.5);
   border-radius: 60px;
   margin: 0.625rem 0 0.625rem 0;
+  font-weight: 400;
+  font-style: normal;
 }
 a.sticky-cta:hover,
 button.sticky-cta:hover {
@@ -41,5 +43,20 @@ button.sticky-cta:hover {
 @media (min-width: 640px) {
   .button {
     font-size: 0.75rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .sticky-cta {
+    margin: 0px;
+    border-radius: 0px;
+  }
+}
+
+@media (max-width: 768px) {
+  .sticky-content-button {
+    background: linear-gradient(97.14deg, #e9e9e9 14.99%, #f4f4f4 93.37%);
+    border-radius: var(--from-creator-button-border-radius, 0px);
+    box-shadow: 0px -7px 30px rgba(0, 0, 0, 0.2) !important;
   }
 }
